--- a/trackman/templates/admin/reports.html
+++ b/trackman/templates/admin/reports.html
@@ -1,11 +1,11 @@
 {% extends "admin/base.html" %}
 {% set page_title="Reports" %}
-{% block nav_admin_reports %}<li class="active"><a href="{{ url_for('admin.reports') }}">Reports</a></li>{% endblock %}
+{% block nav_admin_reports %}<li class="nav-item active"><a class="nav-link" href="{{ url_for('admin.reports') }}">Reports</a></li>{% endblock %}
 
 {% block content %}
 <h1>Reports</h1>
 
-<div class="panel-body">
+<div class="card-body">
     <div class="list-group">
         <a href="{{ url_for('admin.reports_bmi') }}" class="list-group-item">BMI Report</a>
     </div>
