--- a/trackman/templates/admin/dj_edit.html
+++ b/trackman/templates/admin/dj_edit.html
@@ -1,6 +1,6 @@
 {% extends "admin/base.html" %}
 {% set page_title="Edit DJ: " + dj.airname %}
-{% block nav_admin_djs %}<li class="active"><a href="{{ url_for('admin.djs') }}">DJs</a></li>{% endblock %}
+{% block nav_admin_djs %}<li class="nav-item active"><a class="nav-link" href="{{ url_for('admin.djs') }}">DJs</a></li>{% endblock %}
 
 {% block content %}
 <h1>Edit DJ: {{ dj.airname }}</h1>
@@ -8,8 +8,8 @@
 <form method="post" class="form-horizontal" role="form">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}" />
 
-    <div class="form-group{% if form.airname.errors|length > 0 %} has-error{% endif %}">
-        <label for="id_airname" class="col-sm-3 control-label">On-Air Name</label>
+    <div class="form-group row{% if form.airname.errors|length > 0 %} has-error{% endif %}">
+        <label for="id_airname" class="col-sm-3 col-form-label control-label">On-Air Name</label>
         <div class="col-sm-9">
             <input type="text" name="airname" id="id_airname"
                 value="{{ form.airname.data or dj.airname }}"
@@ -20,8 +20,8 @@
         </div>
     </div>
 
-    <div class="form-group{% if form.name.errors|length > 0 %} has-error{% endif %}">
-        <label for="id_name" class="col-sm-3 control-label">Real Name</label>
+    <div class="form-group row{% if form.name.errors|length > 0 %} has-error{% endif %}">
+        <label for="id_name" class="col-sm-3 col-form-label control-label">Real Name</label>
         <div class="col-sm-9">
             <input type="text" name="name" id="id_name"
                 value="{{ form.name.data or dj.name }}" required="required"
@@ -32,8 +32,8 @@
         </div>
     </div>
 
-    <div class="form-group{% if form.email.errors|length > 0 %} has-error{% endif %}">
-        <label for="id_email" class="col-sm-3 control-label">Email Address</label>
+    <div class="form-group row{% if form.email.errors|length > 0 %} has-error{% endif %}">
+        <label for="id_email" class="col-sm-3 col-form-label control-label">Email Address</label>
         <div class="col-sm-9">
             <input type="text" name="email" id="id_email"
                 value="{{ form.email.data or dj.email or "" }}"
@@ -44,8 +44,8 @@
         </div>
     </div>
 
-    <div class="form-group{% if form.phone.errors|length > 0 %} has-error{% endif %}">
-        <label for="id_phone" class="col-sm-3 control-label">Phone Number</label>
+    <div class="form-group row{% if form.phone.errors|length > 0 %} has-error{% endif %}">
+        <label for="id_phone" class="col-sm-3 col-form-label control-label">Phone Number</label>
         <div class="col-sm-9">
             <input type="text" name="phone" id="id_phone"
                 class="form-control"
@@ -59,8 +59,8 @@
         </div>
     </div>
 
-    <div class="form-group{% if form.genres.errors|length > 0 %} has-error{% endif %}">
-        <label for="id_genres" class="col-sm-3 control-label">Genres you can DJ</label>
+    <div class="form-group row{% if form.genres.errors|length > 0 %} has-error{% endif %}">
+        <label for="id_genres" class="col-sm-3 col-form-label control-label">Genres you can DJ</label>
         <div class="col-sm-9">
             <input type="text" name="genres" id="id_genres"
                  value="{{ form.genres.data or dj.genres or "" }}"
@@ -71,8 +71,8 @@
         </div>
     </div>
 
-    <div class="form-group{% if form.visible.errors|length > 0 %} has-error{% endif %}">
-        <label for="id_visible" class="col-sm-3 control-label">Visible</label>
+    <div class="form-group row{% if form.visible.errors|length > 0 %} has-error{% endif %}">
+        <label for="id_visible" class="col-sm-3 col-form-label control-label">Visible</label>
         <div class="col-sm-9">
             <select name="visible" id="id_visible"
                     {% if dj.id == 1 %}disabled="disabled"{% endif %}
@@ -86,21 +86,21 @@
         </div>
     </div>
 
-    <div class="form-group">
-        <label class="col-sm-3 control-label">Created</label>
+    <div class="form-group row">
+        <label class="col-sm-3 col-form-label control-label">Created</label>
         <div class="col-sm-9">
-            <p class="form-control-static">{{ dj.time_added|datetime("%Y-%m-%d %H:%M:%S") }}</p>
+            <p class="form-control-plaintext">{{ dj.time_added|datetime("%Y-%m-%d %H:%M:%S") }}</p>
         </div>
     </div>
 
     <div class="form-actions">
         <button type="submit" class="btn btn-primary">
-            <span class="glyphicon glyphicon-ok"></span>
+            <span class="oi oi-check"></span>
             Edit DJ
         </button>
 
-        <a href="{{ url_for('admin.djs') }}" class="btn btn-default">
-            <span class="glyphicon glyphicon-remove"></span>
+        <a href="{{ url_for('admin.djs') }}" class="btn btn-secondary">
+            <span class="oi oi-x"></span>
             Cancel
         </a>
     </div>
