--- a/trackman/templates/admin/index.html
+++ b/trackman/templates/admin/index.html
@@ -1,5 +1,5 @@
 {% extends "admin/base.html" %}
-{% block nav_admin_index %}<li class="active"><a href="{{ url_for('admin.index') }}">Home</a></li>{% endblock %}
+{% block nav_admin_index %}<li class="nav-item active"><a class="nav-link" href="{{ url_for('admin.index') }}">Home</a></li>{% endblock %}
 
 {% block content %}
 <h1>{{ config.STATION_NAME }}</h1>
