--- a/trackman/templates/admin/reports_bmi.html
+++ b/trackman/templates/admin/reports_bmi.html
@@ -1,18 +1,18 @@
 {% extends "admin/base.html" %}
 {% set page_title="Reports: BMI Report" %}
-{% block nav_admin_reports %}<li class="active"><a href="{{ url_for('admin.reports') }}">Reports</a></li>{% endblock %}
+{% block nav_admin_reports %}<li class="nav-item active"><a class="nav-link" href="{{ url_for('admin.reports') }}">Reports</a></li>{% endblock %}
 
 {% block content %}
 <h1>Reports: BMI Report</h1>
 
-<div class="panel-body">
+<div class="card-body">
     <p>These dates are inclusive; you do not need to add or subtract days.</p>
 
     <form method="post" class="form-horizontal" role="form">
         <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}" />
 
-        <div class="form-group{% if 'start' in error_fields %} has-error{% endif %}">
-            <label for="id_dtstart" class="col-sm-3 control-label">Start</label>
+        <div class="form-group row{% if 'start' in error_fields %} has-error{% endif %}">
+            <label for="id_dtstart" class="col-sm-3 col-form-label control-label">Start</label>
             <div class="col-sm-9">
                 <input type="date" name="dtstart" id="id_dtstart" value=""
                     required="required" placeholder="YYYY-MM-DD"
@@ -20,8 +20,8 @@
             </div>
         </div>
 
-        <div class="form-group{% if 'end' in error_fields %} has-error{% endif %}">
-            <label for="id_dtend" class="col-sm-3 control-label">End</label>
+        <div class="form-group row{% if 'end' in error_fields %} has-error{% endif %}">
+            <label for="id_dtend" class="col-sm-3 col-form-label control-label">End</label>
             <div class="col-sm-9">
                 <input type="date" name="dtend" id="id_dtend" value=""
                     required="required" placeholder="YYYY-MM-DD"
@@ -31,12 +31,12 @@
 
         <div class="form-actions">
             <button type="submit" class="btn btn-primary">
-                <span class="glyphicon glyphicon-ok"></span>
+                <span class="oi oi-check"></span>
                 Generate BMI Report
             </button>
 
-            <a href="{{ url_for('admin.reports') }}" class="btn btn-default">
-                <span class="glyphicon glyphicon-remove"></span>
+            <a href="{{ url_for('admin.reports') }}" class="btn btn-secondary">
+                <span class="oi oi-x"></span>
                 Cancel
             </a>
         </div>
