--- a/trackman/templates/admin/role_add_group.html
+++ b/trackman/templates/admin/role_add_group.html
@@ -1,6 +1,6 @@
 {% extends "admin/base.html" %}
 {% set page_title="Add Group Role " %}
-{% block nav_admin_roles %}<li class="active"><a href="{{ url_for('admin.roles') }}">Roles</a></li>{% endblock %}
+{% block nav_admin_roles %}<li class="nav-item active"><a class="nav-link" href="{{ url_for('admin.roles') }}">Roles</a></li>{% endblock %}
 
 {% block content %}
 <h1>Add Group Role</h1>
@@ -8,16 +8,16 @@
 <form method="post" class="form-horizontal" role="form">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}" />
     
-    <div class="form-group{% if 'group' in error_fields %} has-error{% endif %}">
-        <label for="id_group" class="col-sm-3 control-label">Group</label>
+    <div class="form-group row{% if 'group' in error_fields %} has-error{% endif %}">
+        <label for="id_group" class="col-sm-3 col-form-label control-label">Group</label>
         <div class="col-sm-9">
             <input type="text" name="group" id="id_group"
                 value="" required="required" class="form-control" />
         </div>
     </div>
 
-    <div class="form-group{% if 'role' in error_fields %} has-error{% endif %}">
-        <label for="id_role" class="col-sm-3 control-label">Role</label>
+    <div class="form-group row{% if 'role' in error_fields %} has-error{% endif %}">
+        <label for="id_role" class="col-sm-3 col-form-label control-label">Role</label>
         <div class="col-sm-9">
             <select id="id_role" name="role" class="form-control">
                 {% for role in roles %}
@@ -28,12 +28,12 @@
     </div>
     <div class="form-actions">
         <button type="submit" class="btn btn-primary">
-            <span class="glyphicon glyphicon-ok"></span>
+            <span class="oi oi-check"></span>
             Add Group Role
         </button>
 
-        <a href="{{ url_for('admin.roles') }}" class="btn btn-default">
-            <span class="glyphicon glyphicon-remove"></span>
+        <a href="{{ url_for('admin.roles') }}" class="btn btn-secondary">
+            <span class="oi oi-x"></span>
             Cancel
         </a>
     </div>
