--- a/trackman/templates/login.html
+++ b/trackman/templates/login.html
@@ -1,17 +1,10 @@
-{% import "macros.html" as macros %}
 {% extends "base.html" %}
-{% block bodyattrib %} class="page-signin"{% endblock %}
+{% block nav_login %}<li class="nav-item"><a class="nav-link active" href="{{ url_for('trackman_private.login') }}">Home</a></li>{% endblock %}
 {% block content %}
+<div class="container">
+<h2>DJ Login</h2>
 
-<div class="trackman-buttons">
-    <h2>{{ trackman_name }}</h2>
-    {{ macros.render_preshow_nav('login') }}
-</div>
-
-<div class="trackman-buttons">
 <form action="{{ url_for('trackman_private.login') }}" method="post">
-    <h2 class="form-signin-heading">DJ Login</h2>
-
     <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}" />
 
     <div class="form-group">
@@ -23,14 +16,14 @@
         </select>
     </div>
 
-    <button type="submit" class="btn btn-default">
-        <span class="glyphicon glyphicon-log-in"></span>
+    <button type="submit" class="btn btn-secondary">
+        <span class="oi oi-account-login"></span>
         Login
     </button>
 
     {% if not automation %}
-    <button type="button" class="btn btn-default" id="automation_btn">
-        <span class="glyphicon glyphicon-play"></span>
+    <button type="button" class="btn btn-secondary" id="automation_btn">
+        <span class="oi oi-media-play"></span>
         Start Automation
     </button>
     {% endif %}
