Switch back to input group style for track entry

--- a/trackman/templates/log.html
+++ b/trackman/templates/log.html
@@ -99,28 +99,36 @@
     <div class="row">
         <div class="form-group col-md-3">
             <div class="input-group">
-                <label for="artist" class="col-form-label mr-2">Artist</label>
+                <div class="input-group-prepend">
+                    <label for="artist" class="input-group-text">Artist</label>
+                </div>
                 <input type="text" name="artist" id="artist" value="" class="form-control"
                     title="Enter the name of the artist for the track. If there is no clear artist listed, please use Various Artists as the artist."/>
             </div>
         </div>
         <div class="form-group col-md-3">
             <div class="input-group">
-                <label for="title" class="col-form-label mr-2">Title</label>
+                <div class="input-group-prepend">
+                    <label for="title" class="input-group-text">Title</label>
+                </div>
                 <input type="text" name="title" id="title" value="" class="form-control"
                     title="Enter the name of the track. Please log multiple tracks separately, even if they are on the same album."/>
             </div>
         </div>
         <div class="form-group col-md-3">
             <div class="input-group">
-                <label for="album" class="col-form-label mr-2">Album</label>
+                <div class="input-group-prepend">
+                    <label for="album" class="input-group-text">Album</label>
+                </div>
                 <input type="text" name="album" id="album" value="" class="form-control"
                     title="Enter the name of the release this track is on. For historical reasons, this is referred to as an album even if it is not."/>
             </div>
         </div>
         <div class="form-group col-md-3">
             <div class="input-group">
-                <label for="rlabel" class="col-form-label mr-2">Label</label>
+                <div class="input-group-prepend">
+                    <label for="rlabel" class="input-group-text">Label</label>
+                </div>
                 <input type="text" name="rlabel" id="rlabel" value="" class="form-control"
                     title="Enter the record label for the release the track is on. Please be as specific as possible and include only one label; for example, use Sub Pop Records instead of the parent company, Warner Music Group."/>
             </div>
@@ -145,7 +153,9 @@
             <div class="form-inline">
                 <div class="form-group">
                     <div class="input-group">
-                        <label for="rotation" class="col-form-label mr-2">Rotation</label>
+                        <div class="input-group-prepend">
+                            <label for="rotation" class="input-group-text">Rotation</label>
+                        </div>
                         <select class="rotation form-control" id="rotation">
                         </select>
                     </div>
