--- a/trackman/templates/log.html
+++ b/trackman/templates/log.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block header %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark trackman-header mb-2">
+<nav class="navbar navbar-expand-lg navbar-light bg-light trackman-header mb-2">
     <div class="navbar-header mr-sm-3">
         <span class="navbar-brand">{{ trackman_name }}</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#trackman-top-collapse" aria-controls="trackman-top-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                     On Air
                 </button>
 
-                <button type="button" class="btn btn-outline-warning" id="trackman_logout_btn">
+                <button type="button" class="btn btn-outline-secondary" id="trackman_logout_btn">
                     <span class="oi oi-account-logout"></span>
                     Logout
                 </button>
