--- a/trackman/templates/login.html
+++ b/trackman/templates/login.html
@@ -16,7 +16,7 @@
         </select>
     </div>
 
-    <button type="submit" class="btn btn-secondary">
+    <button type="submit" class="btn btn-primary">
         <span class="oi oi-account-login"></span>
         Login
     </button>
